src/objects/PSIC__c.object
<CustomObject>
    <description>PSIC</description>
    <fields>
        <fullName>Demand_Factor__c</fullName>
        <description>Recommended demand factor by PSIC</description>
        <inlineHelpText>Recommended demand factor by PSIC</inlineHelpText>
        <label>Demand Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load_Factor__c</fullName>
        <description>Suggested Load Factor by PSIC</description>
        <inlineHelpText>Suggested Load Factor by PSIC</inlineHelpText>
        <label>Load Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSIC_Code__c</fullName>
        <description>PSIC code (referenced for CMSv10)</description>
        <externalId>true</externalId>
        <inlineHelpText>PSIC code (referenced for CMSv10)</inlineHelpText>
        <label>PSIC Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>PSIC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Demand_Factor__c</columns>
        <columns>Load_Factor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PSIC Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSICs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>